infra/step-ca/networking/tlsroute-backend.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: step-ca-backend-route
  namespace: step-ca
spec:
  parentRefs:
  - name: step-ca-gateway
    namespace: step-ca
    sectionName: step-ca-backend
  hostnames:
  - "step-ca-backend.k3s.internal.darak.dev"
  rules:
  - backendRefs:
      - name: step-ca-backend
        port: 9000
